Fix missing package names and array.length